--- a/css/styles.css
+++ b/css/styles.css
@@ -256,7 +256,7 @@ body {
 }
 
 .subscribe {
-font-family: 'Roboto';
+/* font-family: 'Roboto'; */
 font-weight: 500;
 font-size: 16px;
 line-height: 1.5;
@@ -269,21 +269,50 @@ margin-bottom: 16px;
     display: flex;
 justify-content: space-between;
 align-items: center;
-    gap: 24px;
 }
+
+.subscribe-form-email-wrapper{
+    margin-right: 24px;
+}
+
+.subscribe-form-email-wrapper::placeholder {
+   color: #FFFFFF; 
+}
+
+.subscribe-form-email {
+    width: 264px;
+    height: 40px;
+    border: 1px solid #FFFFFF;
+filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+border-radius: 4px;
+background-color: transparent; 
+
+font-size: 12px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+color: #FFFFFF;
+padding-left: 16px;
+}
+
 
 .subscribe.btn {
+    min-width: 165px;
+    height: 40px;
 letter-spacing: 0.04em;
 display: flex;
-flex-direction: row;
 justify-content: center;
 align-items: center;
-padding: 8px 24px;
-gap: 16px;
-background: #4D5AE5;
+/* padding: 8px 24px;
+gap: 16px; */
+background-color: #4D5AE5;
 border-radius: 4px;
+cursor: pointer;
+border: none;
 }
 
+.subscribe-svg {
+    margin-left: 16px;
+}
 
 /* ======================== index.html ========================*/
 
