--- a/css/styles.css
+++ b/css/styles.css
@@ -245,6 +245,10 @@ body {
     margin-bottom: 16px;
 }
 
+.content.social {
+margin-right: 80px;
+}
+
 .content .social-list {
     display: flex;
     gap: 16px;
@@ -748,6 +752,7 @@ border: none;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 72px 24px 24px 24px;
 }
 
 .mogal-close-btn {
@@ -790,4 +795,93 @@ border: none;
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+}
+
+
+.contact-form-text {
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5px;
+text-align: center;
+letter-spacing: 0.02em;
+color: #2E2F42;
+/* display: inline-block;
+margin-bottom: 16px; */
+}
+
+.contact-form-field-wrapper,
+.contact-form-checkbox-wrapper {
+display: block;
+padding-bottom: 4px;
+
+}
+
+.contact-form-field-wrapper {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8E8F99;
+}
+
+.contact-form-input {
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+border-radius: 4px;
+padding-left: 38px;
+margin-bottom: 8px;
+position: relative;
+
+
+}
+
+.contact-form-massege {
+margin-bottom: 16px;
+}
+
+.contact-form-checkbox {
+    margin-bottom: 16px;
+}
+
+
+.checkbox-policy {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8E8F99;
+}
+
+
+.privacy-policy {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.04em;
+    text-decoration-line: underline;
+    color: #4D5AE5;
+}
+
+.contact-form-submit {
+    padding: 16px 32px;
+    width: 169px;
+height: 56px;
+left: 635px;
+top: 584px;
+background: #4D5AE5;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+color: #FFFFFF;
+}
+
+.contact-form-input-icon {
+    position: absolute;
+    background-color: #2E2F42;
+    display: block;
 }
