--- a/css/styles.css
+++ b/css/styles.css
@@ -136,7 +136,7 @@ body {
 
 .nav-link:hover,
 .nav-link:focus {
-    color:  #404bbf;
+    color: #404bbf;
 }
 
 
@@ -161,7 +161,7 @@ body {
 
 
 .active-open {
-    color:  #404bbf;
+    color: #404bbf;
 }
 
 .active-open::after {
@@ -246,7 +246,7 @@ body {
 }
 
 .content.social {
-margin-right: 80px;
+    margin-right: 80px;
 }
 
 .content .social-list {
@@ -260,58 +260,58 @@ margin-right: 80px;
 }
 
 .subscribe {
-/* font-family: 'Roboto'; */
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #FFFFFF;
-margin-bottom: 16px;
+    /* font-family: 'Roboto'; */
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+    margin-bottom: 16px;
 }
 
 .subscribe-form {
     display: flex;
-justify-content: space-between;
-align-items: center;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.subscribe-form-email-wrapper{
+.subscribe-form-email-wrapper {
     margin-right: 24px;
 }
 
 .subscribe-form-email-wrapper::placeholder {
-   color: #FFFFFF; 
+    color: #FFFFFF;
 }
 
 .subscribe-form-email {
     width: 264px;
     height: 40px;
     border: 1px solid #FFFFFF;
-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-border-radius: 4px;
-background-color: transparent; 
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    background-color: transparent;
 
-font-size: 12px;
-line-height: 1.5;
-letter-spacing: 0.04em;
-color: #FFFFFF;
-padding-left: 16px;
+    font-size: 12px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #FFFFFF;
+    padding-left: 16px;
 }
 
 
 .subscribe.btn {
     min-width: 165px;
     height: 40px;
-letter-spacing: 0.04em;
-display: flex;
-justify-content: center;
-align-items: center;
-/* padding: 8px 24px;
+    letter-spacing: 0.04em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* padding: 8px 24px;
 gap: 16px; */
-background-color: #4D5AE5;
-border-radius: 4px;
-cursor: pointer;
-border: none;
+    background-color: #4D5AE5;
+    border-radius: 4px;
+    cursor: pointer;
+    border: none;
 }
 
 .subscribe-svg {
@@ -799,18 +799,18 @@ border: none;
 
 
 .modal-text {
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5px;
-text-align: center;
-letter-spacing: 0.02em;
-color: #2E2F42;
-margin-bottom: 16px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
+    margin-bottom: 16px;
 }
 
 .contact-form-field-wrapper,
 .contact-form-checkbox-wrapper {
-display: block;
+    display: block;
 
 }
 
@@ -826,26 +826,25 @@ display: block;
 .contact-form-input {
     width: 100%;
     height: 40px;
-    border: 1px solid rgba(46, 47, 66, 0.4);
-border-radius: 4px;
-padding-left: 38px;
-background-color: transparent;
-outline: transparent; 
-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border: 1px solid rgba(46, 47, 66, 0.2);
+    border-radius: 4px;
+    padding-left: 38px;
+    background-color: transparent;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-form-input:focus,
-.contact-form-input:hover
-{
-    border-color: #4D5AE5; 
+.contact-form-input:hover {
+    border-color: #4D5AE5;
 }
 
 .contact-form-conteiner {
     margin-bottom: 8px;
 }
 
-.contact-form-massege {
-margin-bottom: 16px;
+.comment-conteiner {
+    margin-bottom: 16px;
 }
 
 .contact-form-checkbox {
@@ -874,26 +873,26 @@ margin-bottom: 16px;
 .contact-form-submit {
     padding: 16px 32px;
     width: 169px;
-height: 56px;
-left: 635px;
-top: 584px;
-background: #4D5AE5;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-border-radius: 4px;
+    height: 56px;
+    left: 635px;
+    top: 584px;
+    background: #4D5AE5;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
 
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.04em;
-color: #FFFFFF;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #FFFFFF;
 }
 
 .contact-form-input-icon {
     position: absolute;
-left: 16px;
-top: 50%; 
-transform: translateY(-50%); 
-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     background-color: #2E2F42;
     fill: #4D5AE5;
@@ -902,4 +901,30 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .contact-form-conteiner-input {
     position: relative;
+}
+
+.contact-form-massege {
+    width: 100%;
+    height: 120px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    border: 1px solid rgba(46, 47, 66, 0.2);
+    border-radius: 4px;
+    background-color: transparent;
+    padding: 8px 16px;
+    outline: transparent;
+    resize: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.contact-form-massege:focus,
+.contact-form-massege:hover {
+    border-color: #4D5AE5;
+}
+
+.checkbox-conteiner {
+    margin-bottom: 24px;
 }
