--- a/css/styles.css
+++ b/css/styles.css
@@ -272,7 +272,7 @@ body {
 .subscribe-form {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    /* align-items: center; */
 }
 
 .subscribe-form-email-wrapper {
@@ -317,6 +317,8 @@ gap: 16px; */
 .subscribe-svg {
     margin-left: 16px;
 }
+
+
 
 /* ======================== index.html ========================*/
 
@@ -852,39 +854,26 @@ gap: 16px; */
 }
 
 
-.checkbox-policy {
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.04em;
-    color: #8E8F99;
-}
-
-
-.privacy-policy {
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 16px;
-    letter-spacing: 0.04em;
-    text-decoration-line: underline;
-    color: #4D5AE5;
-}
 
 .contact-form-submit {
     padding: 16px 32px;
-    width: 169px;
+    min-width: 169px;
     height: 56px;
-    left: 635px;
-    top: 584px;
-    background: #4D5AE5;
+    background-color: #4D5AE5;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
-
+    
+    font-family: "Roboto";
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #FFFFFF;
+
+    display: block;
+    cursor: pointer;
+    border: none; 
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .contact-form-input-icon {
@@ -894,8 +883,8 @@ gap: 16px; */
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    background-color: #2E2F42;
-    fill: #4D5AE5;
+   fill: #2E2F42;
+    /* fill: #4D5AE5; */
 }
 
 
@@ -927,4 +916,27 @@ gap: 16px; */
 
 .checkbox-conteiner {
     margin-bottom: 24px;
+}
+
+
+.contact-form-checkbox-wrapper {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8E8F99;
+}
+
+/* 
+.checkbox-policy {
+  
+}
+
+
+.privacy-policy {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.04em;
+    text-decoration-line: underline;
+    color: #4D5AE5; */
 }
