--- a/css/styles.css
+++ b/css/styles.css
@@ -839,6 +839,7 @@ gap: 16px; */
 .contact-form-input:focus,
 .contact-form-input:hover {
     border-color: #4D5AE5;
+    fill: #4D5AE5;
 }
 
 .contact-form-conteiner {
@@ -863,7 +864,7 @@ gap: 16px; */
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     
-    font-family: "Roboto";
+    font-family: "Roboto",sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -884,9 +885,13 @@ gap: 16px; */
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
    fill: #2E2F42;
-    /* fill: #4D5AE5; */
+    
 }
 
+.contact-form-input-icon:focus,
+.contact-form-input-icon:hover {
+fill: #4D5AE5;
+}
 
 .contact-form-conteiner-input {
     position: relative;
@@ -926,17 +931,24 @@ gap: 16px; */
     color: #8E8F99;
 }
 
-/* 
+
 .checkbox-policy {
-  
-}
-
-
-.privacy-policy {
-    font-weight: 400;
+     font-weight: 400;
     font-size: 12px;
     line-height: 16px;
     letter-spacing: 0.04em;
     text-decoration-line: underline;
-    color: #4D5AE5; */
+    color: #4D5AE5;
+}
+
+
+.checkbox-privacy-policy {
+    width: 16px;
+    height: 16px;
+    border: 1px solid #2e2f42;
+    border-radius: 2px; 
+    display: inline-flex; 
+    align-items: center;
+    justify-content: center; 
+    fill: transparent; 
 }
