--- a/css/styles.css
+++ b/css/styles.css
@@ -974,8 +974,9 @@ fill: #4D5AE5;
 
 .contact-form-checkbox:checked + .contact-form-checkbox-wrapper>.checkbox-privacy-policy {
     background-color:  #404BBF;
-    border: 1px solid #404BBF;
-    
+    border: none;
+    fill: #FFFFFF;
+    border-color: 1px solid #404BBF;
 }
 
 
@@ -983,5 +984,5 @@ fill: #4D5AE5;
     opacity: 1;
 }
 .contact-form-checkbox:focus + .contact-form-checkbox-wrapper>.checkbox-privacy-policy {
-    border: 1px solid #404BBF;
+    border-color: 1px solid #404BBF;
 }
